--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,18 @@
-node_modules
-HELP.md
-target/
-.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# IDEs
+/.idea/*
+!/.idea/runConfigurations
+/*.iml
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Build tools and dependencies
+/target/
+/node_modules/
+/.mvn/wrapper/maven-wrapper.jar
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+# Frontend generated files
+/src/main/frontend/generated/
+/vite.generated.ts
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
+# Logs and OS files
+*.log
+.DS_Store
+Thumbs.db
