--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,3 +5,4 @@ spring.datasource.password=postgres
 # Docker Configuration
 spring.docker.compose.file=docker-compose-test.yaml
 spring.docker.compose.skip.in-tests=false
+spring.docker.compose.lifecycle-management=start-and-stop
