--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,6 +1,6 @@
 services:
   postgres-dev:
-    image: 'postgres:latest'
+    image: 'postgres:18.1'
     container_name: flossrennen-dev-db-container
     restart: unless-stopped
     environment:
