--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -1,6 +1,6 @@
 services:
   postgres-test:
-    image: 'postgres:latest'
+    image: 'postgres:18.1'
     container_name: flossrennen-test-db-container
     environment:
       POSTGRES_DB: flossrennen-test-db
