--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 vaadin.launch-browser=true
 spring.application.name=flossrennen-management-system
-spring.jmx.enabled=true
+spring.jmx.enabled=false
