--- a/.github/workflows/native-pipeline.yml
+++ b/.github/workflows/native-pipeline.yml
@@ -28,6 +28,9 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
+      - name: Make mvnw executable
+        run: chmod +x mvnw
+
       - name: Run Tests
         run: ./mvnw test -Dspring.profiles.active=test
 
